# myPrivateBabyTracker

./: .dockerignore  .env.example  .gitignore  ARCHON.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  portainer-stack.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 12657ff9f239_initial_core_models.py  306ee614935b_add_api_keys_table.py  3d187e6274bb_add_sleep_plugin.py  918c43c44db8_add_tummy_time_entries_table.py  9d613e342b6f_add_health_entries_table.py  a1b2c3d4e5f6_add_leap_storm_enabled.py  a1b2c3d4e5f6_add_temperature_plugin.py  a1b2c3d4e5f7_add_tags_and_entry_tags.py  a2b3c4d5e6f7_add_child_preterm_fields.py  a8b9c0d1e2f3_add_mother_health_entries.py  (+38 more)
backend/app/: config.py  database.py  logging.py  main.py  version.py
backend/tests/: conftest.py  test_alerts.py  test_api_keys.py  test_auth.py  test_checkup_plugin.py  test_children.py  test_config.py  test_crying_entries.py  test_database.py  test_diaper_plugin.py  test_errors.py  test_feeding_plugin.py  test_growth_plugin.py  test_health.py  test_health_plugin.py  test_import.py  test_logging.py  test_medication_masters.py  test_medication_plugin.py  test_milestones_plugin.py  test_models.py  test_motherhealth_plugin.py  test_notes_plugin.py  test_photo_proxy.py  test_plugin_registry.py  test_preferences.py  test_security.py  test_sleep_plugin.py  test_tags.py  test_temperature_plugin.py  test_todo_plugin.py  test_tummy_time.py  test_vitamind3_plugin.py  test_weight_plugin.py
(+442 files in other folders)
